--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,13 +9,13 @@
     <img class="footer-img" src="/img/footer/footer.png" alt="Logo icon" loading="lazy" width="73" height="131">
     <ul class="footer-navigation">
       <li class="footer-link">
-        <a class="footer-underline" href="Privacy Policy.html">Privacy Policy</a>
+        <a class="footer-underline" href="./privacy.html">Privacy Policy</a>
       </li>
           <li class="footer-link">
-        <a class="footer-underline" href="Cookies Policy.html">Cookies Policy</a>
+        <a class="footer-underline" href="./cookies.html">Cookies Policy</a>
       </li>
       <li class="footer-link">
-        <a class="footer-underline" href="Terms and Conditions.html">Terms of Use</a>
+        <a class="footer-underline" href="./terms.html">Terms of Use</a>
       </li>
       <li class="footer-link">
         <a class="footer-underline" href="#Inbox">Submit a Death</a>
