--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,60 @@
-<header class="header">
-  <div class="container">
+<header class="header" id="site-header">
+  <div class="header-container container">
+    <a class="header-link-home" href="#Home">
+    <img class="header-img" src="/img/footer/footer.png" alt="Logo" loading="lazy" width="28" height="51">
+  </a>
+    <button type="button" class="menu-button" aria-label="menu toggle">
+      <span class="icon">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M3 12H21M3 6H21M3 18H21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </span>
+    </button>
+    <nav class="nav ">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="links" href="index.html#Home">Home</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#About">About</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#Latest">Latest Posts</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#Kinds">Categories</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#Submit">Submit a Story</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#Deaths">Top Deaths</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#Quote">Quote Wall</a>
+        </li>
+        <li class="navigation-item">
+          <a class="links" href="index.html#FAQ">FAQ</a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </header>
+<!-- Mobile menu -->
+<div id="modalWindow" class="modal">
+  <ul class="menu-list">
+    <li><a class="menu-list-item" href="index.html#Home">Home</a></li>
+    <li><a class="menu-list-item" href="index.html#About">About</a></li>
+    <li>
+      <a class="menu-list-item" href="index.html#Latest">Latest Posts</a>
+    </li>
+    <li><a class="menu-list-item" href="index.html#Kinds">Categories</a></li>
+    <li><a class="menu-list-item" href="index.html#Submit">Submit a Story</a></li>
+    <li><a class="menu-list-item" href="index.html#Deaths">Top Deaths</a></li>
+    <li><a class="menu-list-item" href="index.html#Quote">Quote Wall</a></li>
+    <li><a class="menu-list-item" href="index.html#FAQ">FAQ</a></li>
+    <li><a class="menu-list-item" href="./privacy.html">Privacy Policy</a></li>
+    <li><a class="menu-list-item" href="./terms.html">Terms of Use</a></li>
+    <li><a class="menu-list-item" href="./cookies.html">Cookies Policy</a></li>
+  </ul>
+</div>
