--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -13,7 +13,7 @@
   </div>
 </section>
 <!-- What Is Death Diaries? -->
-<section class="what-section">
+<section class="what-section" id="About">
     <div class="container">
 <h2 class="what-title">What Is Death Diaries?</h2>
 <div class="what-wrapper">
@@ -34,7 +34,7 @@
     </div>
 </section>
 <!-- Featured Death Entries -->
-<section class="featured-section">
+<section class="featured-section" id="Latest">
     <div class="container">
         <h2 class="featured-title">Featured Death Entries</h2>
         <h2 class="featured-title-desk">Recent Posts from the Abyss</h2>
@@ -192,7 +192,7 @@
     </div>
 </section>
 <!-- Tell Us How You Died -->
-<section class="tell-section">
+<section class="tell-section" id="Submit">
     <div class="container">
         <h2 class="tell-title">Tell Us How You Died</h2>
         <p class="tell-text">Have a death worth documenting? Share your fail. We feature player-submitted diary entries every week. Funny, dramatic,
@@ -205,7 +205,7 @@
     </div>
 </section>
 <!-- The Hall of Glorious Failure -->
-<section class="hall-section">
+<section class="hall-section" id="Deaths">
     <div class="container">
         <h2 class="hall-title">The Hall of Glorious Failure</h2>
         <ul class="hall-list">
@@ -242,7 +242,7 @@
     </div>
 </section>
 <!-- Words from the Fallen -->
-<section class="word-section">
+<section class="word-section" id="Quote">
     <div class="container word-container">
         <h2 class="word-title">Words from the Fallen</h2>
         <div class="swiper word-swiper">
@@ -385,7 +385,7 @@
     </div>
 </section>
 <!-- Frequently Died Questions -->
-<section class="faq-section">
+<section class="faq-section" id="FAQ">
     <div class="container faq-container">
         <h2 class="faq-title">Frequently Died Questions</h2>
         <ul class="faq-acc">
