--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,6 +4,10 @@ body{
     font-weight: 400;
     font-size: 18px;
     color: #fff;
+    background-image: url("/img/mob.png");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
 }
 h2{
   font-family: "Roboto", sans-serif;
@@ -15,6 +19,7 @@ h2{
 @media only screen and (min-width: 1439px) {
   body{
     font-size: 24px;
+    background-image: url("/img/desk.png");
   }
   h2{
     font-size: 39px;
