--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -170,6 +170,7 @@
 <section class="learn-section">
     <div class="container learn-container">
         <h2 class="leard-title">We Learn More When We Die</h2>
+        <span style="display: none;">Generated:2025-07-09, Hash:25dssd25c</span>
         <div class="learn-text-wrapper">
             <p>Victory is satisfying—but loss? Loss is instructive, emotional, and weirdly poetic. The best games make you care about
             what’s at stake. And when you lose, you feel it.<br/>
